Maverick Synergy 3.0.0-FINAL - Jul 9, 2021

Features
  o Added isRunning method to AbstractSshServer.

Bug Fixes
    o VirtualMountFile fails when it's path within it's parent mount does not exist. 
    
=================
=  HISTORY      =
=================

Maverick Synergy 3.0.0-RC8 - Jun 21, 2021

Features
  o Log file transfers at INFO level with performance metrics.
    
Bug Fixes
  o When changing user/group via SftpFileAttributes create new attribute set with just the field being changed to avoid passing attributes that the server does not want to change.
  o Missing enableFile methods from RootLoggerContext interface.
  o Window space lockup when transfering to Maverick Legacy server due to Synergy attempting to write all blocks of data without checking responses.
  o SFTP channel does not exit after SSH_MSG_CHANNEL_EOF.
  o Transport idle mechanism not engaged causing idle timeout settings to be ignored. 
  o Added additional support for extending authentication idle timeout setting to any part of the communication prior to successful authentication.
 
------------------

Maverick Synergy 3.0.0-RC7 - May 26, 2021
 
Features
    o Added optional symlinkTo and readSymbolicLink methods to AbstractFile.
    
Bug Fixes
    o Do not read or write SSH_FILEXFER_ATTR_SUBSECOND_TIMES if parent time flag has not been specified.
    o Refactored SFTP session cleanup to ensure events are always generated.
    o EVENT_AUTHENTICATION_STARTED added and fired once to indicate client has started authentication service with username parameter, EVENT_USERAUTH_STARTED now is fired at the beginning of each separate authentication attempt with parameters for user and method being attempted. 
    o Fixed event started/finished attributes in authentication to encompass entire authentication step, and separately on each individual attempt.