@@ -1063,8 +1063,7 @@ public abstract class TransportProtocol<T extends SshContext>
 
 		long idleTimeSeconds = (System.currentTimeMillis() - lastActivity) / 1000;
 
-		if(currentState == NEGOTIATING_PROTOCOL 
-				|| currentState == PERFORMING_KEYEXCHANGE) {
+		if(!hasCompletedKeyExchange()) {
 			if(con.getContext().getIdleAuthenticationTimeoutSeconds() < idleTimeSeconds) {
 				if(Log.isDebugEnabled()) {
 					Log.debug("Idle time of {} seconds exceeded threshold of {} seconds", 
@@ -1075,6 +1074,18 @@ public abstract class TransportProtocol<T extends SshContext>
 				return true;
 			}
 		}
+		if(currentState == CONNECTED) { 
+			if(con.getContext().getIdleConnectionTimeoutSeconds() < idleTimeSeconds) {
+				if(Log.isDebugEnabled()) {
+					Log.debug("Idle time of {} seconds exceeded threshold of {} seconds", 
+							idleTimeSeconds,
+							con.getContext().getIdleConnectionTimeoutSeconds());
+				}
+				disconnect(BY_APPLICATION, "Remote exceeded idle timeout for authenticated connections");
+				return true;
+			}
+		}
+		
 		if (currentState == TransportProtocol.CONNECTED
 				|| currentState == TransportProtocol.PERFORMING_KEYEXCHANGE) {
 			if(getContext().isSendIgnorePacketOnIdle()) {
